[gd_scene load_steps=4 format=3 uid="uid://fs6gtdpj1xwd"]

[ext_resource type="Script" uid="uid://tomqlor0y7vw" path="res://cenas/gui/hub_ondas.gd" id="1_e5p0j"]
[ext_resource type="FontFile" uid="uid://d17c01tt07uie" path="res://fontes/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" id="2_cw3sr"]

[sub_resource type="Theme" id="Theme_o0gf5"]
default_font_size = 12

[node name="hub_ondas" type="CanvasLayer"]
script = ExtResource("1_e5p0j")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 741.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -514.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o0gf5")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="LabelOnda" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_cw3sr")
theme_override_font_sizes/font_size = 22
text = "ONDAS: 0/0"

[node name="LabelInimigos" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_cw3sr")
theme_override_font_sizes/font_size = 22
text = "INIMIGOS"

[node name="LabelInimigosVivos" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_cw3sr")
theme_override_font_sizes/font_size = 22
text = "INIMIGOS Vivos"
